<resources>
    <string name="app_name">CalculaFlex</string>
    <string name="pre_o_da_gasolina">Preço da Gasolina</string>
    <string name="km_l">KM/L Gasolina</string>
    <string name="km_l_lcool">KM/L Álcool</string>
    <string name="sugest_o_de_abastecimento">Sugestão de Abastecimento</string>
    <string name="etanol">Etanol</string>
    <string name="gasto_r_km">Gasto R$/Km</string>
    <string name="_0_30">0.30</string>
    <string name="gasolina">Gasoline</string>
    <string name="alcool">Álcool</string>
    <string name="gas_price_key">GAS_PRICE</string>
    <string name="ethanol_price_key">ETHANOL_PRICE</string>
    <string name="gas_average_price_key">GAS_AVERAGE</string>
    <string name="ethanol_average_price_key">ETHANOL_AVERAGE</string>
    <string name="label_ration_label">Gasolina/Etanol: %1$s</string>
</resources>
