<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/banner" />

    <View style="@style/divider" />

    <TextView
        style="@style/header_title"
        android:drawableStart="@drawable/analisis_icon"
        android:text="@string/sugest_o_de_abastecimento" />

    <View style="@style/divider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvSuggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/etanol"
            android:textSize="40dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvFuelRatio"
        style="@style/header_subtitle"
        android:text="@string/label_ration_label"
        android:textStyle="normal"
        android:gravity="center"/>

    <View style="@style/divider" />

    <TextView
        style="@style/header_title"
        android:drawableStart="@drawable/coins_icon"
        android:text="@string/gasto_r_km" />

    <View style="@style/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvGasAverageResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/_0_30"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tvEthanolAverageResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/_0_30"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/gasolina"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/alcool"
            android:textSize="12dp" />

    </LinearLayout>

</LinearLayout>