<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/banner" />

        <View style="@style/divider" />

        <TextView
            style="@style/header_title"
            android:drawableStart="@drawable/fuel_icon"
            android:text="Posto de Gasolina" />

        <View style="@style/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout style="@style/container_row">

                <TextView
                    style="@style/header_subtitle"
                    android:text="@string/pre_o_da_gasolina" />

                <TextView
                    style="@style/header_subtitle"
                    android:text="@string/pre_o_da_gasolina" />
            </LinearLayout>

            <LinearLayout style="@style/container_row">

                <EditText
                    android:id="@+id/etGasPrice"
                    style="@style/input_number_decimal"
                    android:hint="Ex.:4.19" />

                <EditText
                    android:id="@+id/etEthanolPrice"
                    style="@style/input_number_decimal"
                    android:hint="Ex.:2.49" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/divider" />

        <TextView
            style="@style/header_title"
            android:drawableStart="@drawable/car_icon"
            android:text="Consumo médio" />

        <View style="@style/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout style="@style/container_row">

                <TextView
                    style="@style/header_subtitle"
                    android:text="@string/km_l" />

                <TextView
                    style="@style/header_subtitle"
                    android:text="@string/km_l_lcool" />
            </LinearLayout>

            <LinearLayout style="@style/container_row">

                <EditText
                    android:id="@+id/etGasAverage"
                    style="@style/input_number_decimal"
                    android:hint="Ex.:4.19" />

                <EditText
                    android:id="@+id/etEthanolAverage"
                    style="@style/input_number_decimal"
                    android:hint="Ex.:2.49" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calcular" />

    </LinearLayout>
</ScrollView>